@@ -16,6 +16,8 @@
 
     * las/arch/x86_64/main.c: Added the CLFLUSH instruction
 
+    * las/arch/x86_64/main.c: Added the CLI instruction
+
 
 2013-12-06  Hirochika Asai  <asai@scyphus.co.jp>
 
